--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
   <!-- Your code here -->
-  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
 
 </body>
 </html>
