--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
   <!-- Your code here -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion" title="">
+
 
 </body>
 </html>
