--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Your code here -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion" title="">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Yawning Lion" title="Naptime!">
 
 
 </body>
